# sup_test

./: .env-example-local  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_celery  Dockerfile_django  README.md  directory_structure.md  docker-compose.yaml  dockerfile~  generate_markdown.py  pyproject.toml  setup.cfg
api/: .env-example  __init__.py  pytest.ini
api/src/: .env-example  __init__.py
api/src/apps/: custom_view.py  custom_view.py~  permissions.py
api/src/apps/auth_app/: apps.py  forms.py  urls.py  views.py
api/src/apps/authorization/: forms.py  urls.py  views.py
api/src/apps/base/: __init__.py  permissions.py
api/src/apps/home/: apps.py  urls.py  views.py
api/src/apps/invites/: admin.py  apps.py  (+3 more)
api/src/config/: settings.py  settings.py~  urls.py  urls.py~
api/src/controllers/: meets.py  projects.py
api/src/domain/: authorization.py
api/src/models/: apps.py  choice_classes.py  invites.py  managers.py  meets.py  meets.py~  models.py  projects.py  users.py  verifyemail.py
api/src/services/: celery.py  tasks.py
api/src/static/: invt.html
api/src/templates/: base.html
api/src/tests/: conftest.py  factories.py  test_authorization.py  test_comments.py  test_features.py  test_meets.py  test_permissions.py  test_projects.py  test_registration.py  test_roles.py  test_tasks.py  test_teams.py  test_users.py  test_verifyemail.py  tests_invites.py
api/src/validators/: validators.py
infrasructure/: docker-compose.yaml  dockerfile  dockerfile~
web/static/css/: output.css
web/static/script/: create_meet.js
(+1399 files in other folders)
