[tool.poetry]
name = "sup-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
redis = "^5.0.8"
celery = "^5.4.0"
black = "^24.8.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
